<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal">


    <ImageView
        android:id="@+id/news_imageview"
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:padding="8dp"
        app:srcCompat="@android:drawable/ic_menu_crop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/news_title_textview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:gravity="start|center_vertical"
            android:lines="2"
            android:maxLines="2"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="0dp"
            android:text="@string/title_string"
            android:textColor="@color/title_text_color"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/news_author_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/author_name"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/news_published_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/date_of_item"
                android:textColor="@color/text_color"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>